provider-aws/examples/apigatewayv2/deployment.yaml
apiVersion: apigatewayv2.aws.upbound.io/v1beta1
kind: Deployment
metadata:
  generateName: example-
  labels:
    upjet.upbound.io/test-group: apigatewayv2
spec:
  forProvider:
    apiSelector:
      matchLabels:
        upjet.upbound.io/test-group: apigatewayv2
    description: Example deployment
    lifecycle:
    - create_before_destroy: true
    region: us-west-1
