provider-aws/examples/apigatewayv2/api-websocket.yaml
apiVersion: apigatewayv2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: example-websocket
  annotations:
    upjet.upbound.io/manual-intervention: "It requires a working Lambda function ARN and we cannot upload a working function code."
  labels:
    upjet.upbound.io/test-group: apigatewayv2-websocket
spec:
  forProvider:
    apiIdSelector:
      matchLabels:
        upjet.upbound.io/test-group: apigatewayv2-websocket
    region: us-west-1
    routeKey: "POST /login"
    targetSelector:
      matchLabels:
        upjet.upbound.io/test-group: apigatewayv2-websocket
