provider-aws/examples/apigatewayv2/route.yaml
apiVersion: apigatewayv2.aws.upbound.io/v1beta1
kind: Route
metadata:
  generateName: example-
  labels:
    upjet.upbound.io/test-group: apigatewayv2
spec:
  forProvider:
    apiSelector:
      matchLabels:
        upjet.upbound.io/test-group: apigatewayv2
    region: us-west-1
    routeKey: $default
